 * mod_rewrite issue, generate a .htaccess file before. #432
 * redirect website to absolute url, no more ajax errors #458
 installation.
 * flush cache didn't flush the plugins path #460
 * show a confirmation message before delete component #444
 * ossn system messages css issue on front end #443
 * show a loading icon on registration submit #464
 * During registration even if gender is selected its marked unselected #465
 * cancel friendship' button colliding with user name #279
 * ossnblack theme can't read registration message #304
 * PHP Fatal error:  Call to a member function isOnline() on a non-object classes/OssnChat.php on line 146
 * PHP WARNING: "Division by zero" in file OssnObject.php (line 276)
 * Component installer problems with certain zip - archives #420
 * Chat linefeed problem #278
 * Notifications for group comments #435
 * There is no need to add notification if no hook is present.
 * Unwanted refresh in message window #416
 * [OSSN 3.x] OssnEmbed in settings #466
 * CSS: Pagination with more than 10 users #468
 * ossnblack theme white page issue #469

Additions:
	
 * Implementd plugins for components.
 * Browser css cache issue.
 * Store profile image in computer cache
 * Store profile cover in computer cache
 * Store photos on wall into cache
 * Store group cover into cache.
 * Get object that are requried only (offset)
 * Get entities that are required only (offset)
 * Get annotation that are required only (offset)
 * Allow users to login with email also
 * Allow admins to search unvalidated users.
 * New backend theme
 * Add time_created in users table.
 * We need to accept values in array() in setComSETTINGS #434
 * feature request: multilanguage themes #281
 * New js function Ossn.trigger_message
 * Make actions valid for xhr, there is no need to use json_encode for simple actions.
 * 3 state logic for notifications #202
 * Ossn Wall ajax post
 * allow duplicate group names? #112
 * Match file during upload #402