@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <opensource_socialnework xmlns="http:/opensource-socialnetwork.org/v/1.0">
     <version>3.0-dev</version>
+    <stable_version>2.3</stable_version>
     <release>1426433343</release>
     <licence>GNU General Public License, version 2</licence>
     <author_url>http://www.opensource-socialnetwork.org</author_url>
